<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fractal.FractalActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|right">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_draw"
            android:layout_width="wrap_content"
            android:src="@android:color/transparent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_gravity="center"
            android:text="@string/draw"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:elevation="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/fractal_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spinner_shape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spinner_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RatingBar
            android:numStars="3"
            android:max="3"
            android:stepSize="1"
            android:id="@+id/rating_bar_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Switch
            android:id="@+id/switch_fill_empty"
            android:switchPadding="5dp"
            android:text="@string/spinner_fill_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <com.mvp.fractal.hadar.danny.fractalmvp.fractal.FractalView
        android:id="@+id/fractal_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
